# Fitness-and-Nutrition-SaaS

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamllint.yaml  Build.ps1  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
docs/: debugging_guide.md  deployment_guide.md  important_commands.md
k8s/: deployment.yaml  service.yaml
src/: main.py
tests/: test_main.py
user-service/: values.yaml
