[tool.poetry]
name = "fitness-saas"
version = "0.1.0"
description = "Fitness SaaS backend services"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
motor = "^3.1.1"
pydantic = "^2.0.2"
python-dotenv = "^1.0.0"
httpx = "^0.27.2"
pytest = "^8.3.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.4.1"

[tool.poetry.scripts]
build = "pwsh:./Build.ps1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
importlib-metadata = "^8.4.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
